--- a/Aura.com/src/Components/AppNavbar.css
+++ b/Aura.com/src/Components/AppNavbar.css
@@ -20,9 +20,7 @@
 
 
 .aura-navbar {
-  position: fixed;
-  width: 100%;
-  
+  position: sticky;
   top: 0;
   z-index: 1050; /* Increased from 1030 */
   padding: 1rem 2rem;
