--- a/Aura.com/src/Components/AppNavbar.css
+++ b/Aura.com/src/Components/AppNavbar.css
@@ -1,5 +1,7 @@
 /* ========== AURA NAVBAR STYLING ========== */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
 
 
 .navbar {
