--- a/Aura.com/src/Components/AppNavbar.css
+++ b/Aura.com/src/Components/AppNavbar.css
@@ -323,7 +323,8 @@
 .saffronGuru-logo {
   height: 160px;
   margin-top: -30px;
-  width: 120px;
+  width: 150px;
+  margin-left: -25px;
   object-fit: contain;
   transition: transform 0.3s ease;
 }
